# DLAI

./: CMakeLists.txt
DLAI/QuantizationInDepth/: helper.py  main.py
DynamicQuantizationBert/: download_glue_data.py
OpenGL/: CMakeLists.txt  main.cpp
